--- a/src/styles/styles.sass
+++ b/src/styles/styles.sass
@@ -20,7 +20,8 @@ body
     margin: 0
     background-color: $black
     color: $white
-
+div
+    box-sizing: border-box
 h1,h2,h3,h4,h5,h6
     margin: 0
     font-family: $font-secondary
@@ -95,6 +96,7 @@ p
     border-bottom: solid
     @include border
     h1
+        box-sizing: border-box
         max-width: 860px
         padding: 0 20px
         font-size: 40px
@@ -134,9 +136,11 @@ p
             outline: none
 
 .heading_H2
+    box-sizing: border-box
     border-bottom: solid
     @include border
     h2
+        box-sizing: border-box
         width: 100%
         max-width: 1300px
         margin: 0 auto
@@ -145,9 +149,97 @@ p
         border-right: solid
         @include border
 
+table
+    border-style: solid
+    @include border
+    width: 100%
+    height: 100%
+    td,th
+        text-align: left
+        padding: 5px 10px
+        border-right: solid
+        border-bottom: solid
+        @include border
+        &:last-child
+            border-right: none
+    td
+        font-weight: 200
+    tr
+        &:last-child
+            td
+                border-bottom: none
+
 .loader
     display: flex
     flex-direction: column
     justify-content: center
     align-items: center
     padding: 20px 0
+
+// -----------------------------------
+.cities-and-top30
+    border-bottom: solid
+    border-top: solid
+    margin-top: -1px
+    @include border
+    width: 100%
+    .container
+        display: flex
+        align-items: flex-start
+        justify-content: center
+        padding: 0
+        border: none
+
+    .postcode-table
+        padding: 0 20px 20px 20px
+        min-height: 300px
+
+        &:first-of-type
+            padding-left: 0
+            border-right: solid
+            @include border
+        &:last-of-type
+            padding-right: 0
+
+.cities-group
+    border-bottom: solid
+    @include border
+    width: 100%
+    padding-bottom: 20px
+    .container
+        display: flex
+        align-items: flex-start
+        justify-content: center
+        padding: 0
+        border: none
+
+.postcode-table
+    width: 100%
+    h3
+        border-left: solid
+        border-right: solid
+        border-bottom: solid
+        @include border
+        display: inline-block
+        padding: 10px 20px
+    .heading
+        padding: 20px 0
+        display: flex
+        justify-content: space-between
+        align-items: center
+        width: 100%
+        .btn
+            margin-left: auto
+
+.pagination
+    display: flex
+    align-items: center
+    justify-content: center
+    gap: 20px
+    button
+        background-color: transparent
+        border: none
+        padding: 5px 10px
+        cursor: pointer
+        &:hover
+            background-color: $primary
